cmake_minimum_required(VERSION 3.31)

project(CPPTutorialCollection C CXX)

set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)

set(PROJECTS_DIR ${CMAKE_SOURCE_DIR}/projects)

add_subdirectory(${PROJECTS_DIR}/00-intro)
add_subdirectory(${PROJECTS_DIR}/01-basics)
add_subdirectory(${PROJECTS_DIR}/02-structure)
add_subdirectory(${PROJECTS_DIR}/03-objects)
add_subdirectory(${PROJECTS_DIR}/04-files)
add_subdirectory(${PROJECTS_DIR}/05-device-input)
add_subdirectory(${PROJECTS_DIR}/06-text-game-1)
add_subdirectory(${PROJECTS_DIR}/07-networking)
add_subdirectory(${PROJECTS_DIR}/08-service-daemon)
add_subdirectory(${PROJECTS_DIR}/09-audio)
add_subdirectory(${PROJECTS_DIR}/10-text-game-2)
add_subdirectory(${PROJECTS_DIR}/11-templates)
add_subdirectory(${PROJECTS_DIR}/12-2d-rendering)
add_subdirectory(${PROJECTS_DIR}/13-2d-game-client)
add_subdirectory(${PROJECTS_DIR}/14-2d-game-server)
add_subdirectory(${PROJECTS_DIR}/15-cryptography)
add_subdirectory(${PROJECTS_DIR}/16-databases)
add_subdirectory(${PROJECTS_DIR}/17-multithreading)
add_subdirectory(${PROJECTS_DIR}/18-metaprogramming)
add_subdirectory(${PROJECTS_DIR}/19-libraries)
add_subdirectory(${PROJECTS_DIR}/20-2d-game-physics)
add_subdirectory(${PROJECTS_DIR}/21-spatial-audio)
add_subdirectory(${PROJECTS_DIR}/22-3d-rendering)
add_subdirectory(${PROJECTS_DIR}/23-3d-game-client)
add_subdirectory(${PROJECTS_DIR}/24-3d-game-server)
add_subdirectory(${PROJECTS_DIR}/25-hardware-acceleration)
add_subdirectory(${PROJECTS_DIR}/26-3d-game-physics)
add_subdirectory(${PROJECTS_DIR}/27-artificial-intelligence)
add_subdirectory(${PROJECTS_DIR}/28-ipc)
add_subdirectory(${PROJECTS_DIR}/29-chat-bot)
add_subdirectory(${PROJECTS_DIR}/30-machine-learning)
add_subdirectory(${PROJECTS_DIR}/31-web-server)
add_subdirectory(${PROJECTS_DIR}/32-scripting)
